fix(misc): configure assets

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,9 @@
 
 <body class="mat-typography">
   <app-root></app-root>
+  <script
+    type="text/javascript"
+    src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 </body>
 
 </html>
